--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "genX",
   "version": "0.0.1",
-  "description": "",
-  "main": "./distribution/index.js",
+  "description": "No description yet",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "cross-env WEBPACK_ENV=build webpack",
     "dev": "cross-env WEBPACK_ENV=dev webpack --progress --colors --watch",
@@ -24,10 +24,16 @@
   "homepage": "https://github.com/elvongray/genX#readme",
   "devDependencies": {
     "babel-cli": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.8",
     "mocha": "^2.5.3",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.9.2"
   }
 }
